--- a/acquisition.html
+++ b/acquisition.html
@@ -103,7 +103,7 @@ const categories = {
   sensory: { stimuli: [
     {
       label:"Light 💡",
-      need:"Adam thinks it's too dark in his house and hears that his friend is moving and giving away household supplies. <br> He wants to make his house brighter by adding 4 light bulbs.",
+      need:"Adam thinks it's too dark in his house and hears that his friend is moving and giving away household supplies. He wants to make his house brighter by adding 4 light bulbs.",
       outcome:"Adam ended up taking {{N}} light bulbs. How would Adam feel?",
       emoji:"💡",
       null:"Suppose that Adam did not get to take any light bulbs. How would Adam feel?"
@@ -117,7 +117,7 @@ const categories = {
     },
     {
       label:"Scent 💨",
-      need:"Olivia is looking to change her style, and sees that a fragrance shop is giving out free samples. <br> Olivia was interested in trying out 4 perfumes. ",
+      need:"Olivia is looking to change her style, and sees that a fragrance shop is giving out free samples. Olivia was interested in trying out 4 perfumes. ",
       outcome:"Olivia ended up taking {{N}} fragrance samples. How would Olivia feel?",
       emoji:"💨",
       null:"Suppose that Olivia did not get to take any fragrance samples. How would Olivia feel?"
