--- a/consumption.html
+++ b/consumption.html
@@ -80,21 +80,21 @@ const categories = {
     {
       label:"Cookie 🍪",
       need:"Emma feels hungry and sees that her favorite bakery made too many cookies and is handing them out for free. She wants <b>4</b> cookies.",
-      outcome:"Emma ends up taking {{N}} cookies, and eating them all. How would Emma feel?",
+      outcome:"Emma ended up taking {{N}} cookies, and eating them all. How would Emma feel?",
       emoji:"🍪",
-      null:"Suppose that Emma did not get to take any cookies. How would Emma feel?"
+      null:"Suppose that Emma did not get to take any cookies and eating them. How would Emma feel?"
     },
     {
       label:"Water 🥤",
       need:"Hiro feels thirsty and sees a public water dispenser. He wants <b>4</b> cups of water. ",
-      outcome:"Hiro ends up filling his water bottle with {{N}} cups, and drinking it all. How would Hiro feel?",
+      outcome:"Hiro ended up filling his water bottle with {{N}} cups, and drinking it all. How would Hiro feel?",
       emoji:"🥤",
       null:"Suppose that Hiro did not get to fill his water bottle with any water. How would Hiro feel?"
     },
     {
       label:"Healthy fruits 🍊",
       need:"Nia feels hungry and sees that a farm stand is giving out free oranges. She wants 4 oranges.",
-      outcome:"Nia ends up taking {{N}} oranges home, and eating them all. How would Nia feel?",
+      outcome:"Nia ended up taking {{N}} oranges home, and eating them all. How would Nia feel?",
       emoji:"🍊",
       null:"Suppose that Nia did not get to take any oranges home. How would Nia feel?"
     },
@@ -104,21 +104,21 @@ const categories = {
     {
       label:"Light 💡",
       need:"Adam thinks it's too dark in his house and hears that his friend is moving and giving away household supplies. He wants to make his house brighter by adding 4 light bulbs.",
-      outcome:"Adam ends up taking {{N}} light bulbs, installing all of them in her house, and turning them on. How would Adam feel?",
+      outcome:"Adam ended up taking {{N}} light bulbs, installing all of them in her house, and turning them on. How would Adam feel?",
       emoji:"💡",
       null:"Suppose that Adam did not get to take any light bulbs. How would Adam feel?"
     },
     {
       label:"Temperature ♨️",
       need:"Mei's apartment is too cold and she sees that a hardware store is giving away free space heaters. She wants to make her house warmer by adding 4 heaters.",
-      outcome:"Mei ends up taking {{N}} heaters home, plugging them in, and turning them all on. How would Mei feel?",
+      outcome:"Mei ended up taking {{N}} heaters home, plugging them in, and turning them all on. How would Mei feel?",
       emoji:"♨️",
       null:"Suppose that Mei did not get to take any heaters home. How would Mei feel?"
     },
     {
       label:"Scent 💨",
       need:"Olivia is looking to change her style, and sees that a fragrance shop is giving out free samples. Olivia is interested in trying out 4 perfumes. ",
-      outcome:"Olivia ends up taking {{N}} fragrance samples, and spraying herself with all of them. How would Olivia feel?",
+      outcome:"Olivia ended up taking {{N}} fragrance samples, and spraying herself with all of them. How would Olivia feel?",
       emoji:"💨",
       null:"Suppose that Olivia did not get to take any fragrance samples. How would Olivia feel?"
     },
