--- a/consumption.html
+++ b/consumption.html
@@ -82,21 +82,21 @@ const categories = {
       need:"Emma feels hungry and sees that her favorite bakery made too many cookies and is handing them out for free. She wants <b>4</b> cookies.",
       outcome:"Emma ended up taking {{N}} cookies, and eating them all. How would Emma feel?",
       emoji:"🍪",
-      null:"Suppose that Emma did not get to take any cookies and eating them. How would Emma feel?"
+      null:"Suppose that Emma did not get to take and eat any cookies. How would Emma feel?"
     },
     {
       label:"Water 🥤",
       need:"Hiro feels thirsty and sees a public water dispenser. He wants <b>4</b> cups of water. ",
       outcome:"Hiro ended up filling his water bottle with {{N}} cups, and drinking it all. How would Hiro feel?",
       emoji:"🥤",
-      null:"Suppose that Hiro did not get to fill his water bottle with any water. How would Hiro feel?"
+      null:"Suppose that Hiro did not get to fill his water bottle with and drink any water. How would Hiro feel?"
     },
     {
       label:"Healthy fruits 🍊",
       need:"Nia feels hungry and sees that a farm stand is giving out free oranges. She wants 4 oranges.",
       outcome:"Nia ended up taking {{N}} oranges home, and eating them all. How would Nia feel?",
       emoji:"🍊",
-      null:"Suppose that Nia did not get to take any oranges home. How would Nia feel?"
+      null:"Suppose that Nia did not get to take home and eat any oranges. How would Nia feel?"
     },
   ]},
 
@@ -106,21 +106,21 @@ const categories = {
       need:"Adam thinks it's too dark in his house and hears that his friend is moving and giving away household supplies. He wants to make his house brighter by adding 4 light bulbs.",
       outcome:"Adam ended up taking {{N}} light bulbs, installing all of them in her house, and turning them on. How would Adam feel?",
       emoji:"💡",
-      null:"Suppose that Adam did not get to take any light bulbs. How would Adam feel?"
+      null:"Suppose that Adam did not get to take and install any light bulbs. How would Adam feel?"
     },
     {
       label:"Temperature ♨️",
       need:"Mei's apartment is too cold and she sees that a hardware store is giving away free space heaters. She wants to make her house warmer by adding 4 heaters.",
       outcome:"Mei ended up taking {{N}} heaters home, plugging them in, and turning them all on. How would Mei feel?",
       emoji:"♨️",
-      null:"Suppose that Mei did not get to take any heaters home. How would Mei feel?"
+      null:"Suppose that Mei did not get to take and turn on any heaters home. How would Mei feel?"
     },
     {
       label:"Scent 💨",
       need:"Olivia is looking to change her style, and sees that a fragrance shop is giving out free samples. Olivia is interested in trying out 4 perfumes. ",
       outcome:"Olivia ended up taking {{N}} fragrance samples, and spraying herself with all of them. How would Olivia feel?",
       emoji:"💨",
-      null:"Suppose that Olivia did not get to take any fragrance samples. How would Olivia feel?"
+      null:"Suppose that Olivia did not get to take and apply any fragrance samples. How would Olivia feel?"
     },
   ]},
 
@@ -130,21 +130,21 @@ const categories = {
       need:"Eric is bored over the weekend and hears ahout new game releases. He wants to play 4 new free games",
       outcome:"Eric ended up adding {{N}} free games to his library, and playing them all. How would Eric feel?",
       emoji:"🎮",
-      null:"Suppose that he did not get to add any free games to his library. How would Eric feel?"
+      null:"Suppose that he did not get to add to his library and play any free games. How would Eric feel?"
     },
     {
       label:"Watching TV 🎞️",
       need:"Han is preparing for a long upcoming train trip. He wants to watch 4 episodes of a TV show on the train. ",
       outcome:"Han ended up downloading {{N}} episodes for the trip, and watching them all. How would Han feel?",
       emoji:"🎞️",
-      null:"Suppose that he did not get to download any episodes for the trip. How would Han feel?"
+      null:"Suppose that he did not get to download and watch any episodes for the trip. How would Han feel?"
     },
     {
       label:"Reading 📖",
       need:"Zuri is preparing for the weekend and wants something to read. She saw that a neighbor is clearing out her large comic book collection, and she wants 4 comics.",
       outcome:"She ended up taking {{N}} comic books home, and reading them cover to cover. How would Zuri feel?",
       emoji:"📖",
-      null:"Suppose that Zuri did not get to take any comic books home. How would Zuri feel?"
+      null:"Suppose that Zuri did not get to take home and read any comic books. How would Zuri feel?"
     },
   ]},
 };
