--- a/acquisition.html
+++ b/acquisition.html
@@ -80,24 +80,24 @@ const categories = {
     {
       label:"Cookie 🍪",
       need:"Emma feels hungry and sees that her favorite bakery made too many cookies and is handing them out for free. She wants <b>4</b> cookies.",
-      outcome:"Emma ended up taking {{N}} cookies. How would Emma feel?",
-      singular:"Emma ended up taking {{N}} cookie. How would Emma feel?",
+      outcome:"Emma ended up taking <b>{{N}}</b> cookies. How would Emma feel?",
+      singular:"Emma ended up taking <b>{{N}}</b> cookie. How would Emma feel?",
       emoji:"🍪",
       null:"Suppose that Emma did not get to take any cookies. How would Emma feel?"
     },
     {
       label:"Water 🥤",
       need:"Hiro feels thirsty and sees a public water dispenser. He wants <b>4</b> cups of water. ",
-      outcome:"Hiro ended up filling his water bottle with {{N}} cups. How would Hiro feel?",
-      singular:"Hiro ended up filling his water bottle with {{N}} cup. How would Hiro feel?", 
+      outcome:"Hiro ended up filling his water bottle with <b>{{N}}</b> cups. How would Hiro feel?",
+      singular:"Hiro ended up filling his water bottle with <b>{{N}}</b> cup. How would Hiro feel?", 
       emoji:"🥤",
       null:"Suppose that Hiro did not get to fill his water bottle with any water. How would Hiro feel?"
     },
     {
       label:"Healthy fruits 🍊",
-      need:"Nia feels hungry and sees that a farm stand is giving out free oranges. She wants 4 oranges.",
-      outcome:"Nia ended up taking {{N}} oranges home. How would Nia feel?",
-      singular:"Nia ended up taking {{N}} orange home. How would Nia feel?", 
+      need:"Nia feels hungry and sees that a farm stand is giving out free oranges. She wants <b>4</b> oranges.",
+      outcome:"Nia ended up taking <b>{{N}}</b> oranges home. How would Nia feel?",
+      singular:"Nia ended up taking <b>{{N}}</b> orange home. How would Nia feel?", 
       emoji:"🍊",
       null:"Suppose that Nia did not get to take any oranges home. How would Nia feel?"
     },
@@ -106,25 +106,25 @@ const categories = {
   sensory: { stimuli: [
     {
       label:"Light 💡",
-      need:"Adam thinks it's too dark in his house and hears that his friend is moving and giving away household supplies. He wants to make his house brighter by adding 4 light bulbs.",
-      outcome:"Adam ended up taking {{N}} light bulbs. How would Adam feel?",
-      singular:"Adam ended up taking {{N}} light bulb. How would Adam feel?", 
+      need:"Adam thinks it's too dark in his house and hears that his friend is moving and giving away household supplies. He wants to make his house brighter by adding <b>4</b> light bulbs.",
+      outcome:"Adam ended up taking <b>{{N}}</b> light bulbs. How would Adam feel?",
+      singular:"Adam ended up taking <b>{{N}}</b> light bulb. How would Adam feel?", 
       emoji:"💡",
       null:"Suppose that Adam did not get to take any light bulbs. How would Adam feel?"
     },
     {
       label:"Temperature ♨️",
-      need:"Mei's apartment is too cold and she sees that a hardware store is giving away free space heaters. She wants to make her house warmer by adding 4 heaters.",
-      outcome:"Mei ended up taking {{N}} heaters home. How would Mei feel?",
-      singular:"Mei ended up taking {{N}} heater home. How would Mei feel?",
+      need:"Mei's apartment is too cold and she sees that a hardware store is giving away free space heaters. She wants to make her house warmer by adding <b>4</b> heaters.",
+      outcome:"Mei ended up taking <b>{{N}}</b> heaters home. How would Mei feel?",
+      singular:"Mei ended up taking <b>{{N}}</b> heater home. How would Mei feel?",
       emoji:"♨️",
       null:"Suppose that Mei did not get to take any heaters home. How would Mei feel?"
     },
     {
       label:"Scent 💨",
-      need:"Olivia is looking to change her style, and sees that a fragrance shop is giving out free samples. Olivia is interested in trying out 4 perfumes. ",
-      outcome:"Olivia ended up taking {{N}} fragrance samples. How would Olivia feel?",
-      singular:"Olivia ended up taking {{N}} fragrance sample. How would Olivia feel?",
+      need:"Olivia is looking to change her style, and sees that a fragrance shop is giving out free samples. Olivia is interested in trying out <b>4</b> perfumes. ",
+      outcome:"Olivia ended up taking <b>{{N}}</b>fragrance samples. How would Olivia feel?",
+      singular:"Olivia ended up taking <b>{{N}}</b> fragrance sample. How would Olivia feel?",
       emoji:"💨",
       null:"Suppose that Olivia did not get to take any fragrance samples. How would Olivia feel?"
     },
@@ -133,25 +133,25 @@ const categories = {
   entertainment: { stimuli: [
     {
       label:"Gaming 🎮",
-      need:"Eric is bored over the weekend and hears ahout new game releases. He wants to play 4 new free games",
-      outcome:"Eric ended up adding {{N}} free games to his library. How would Eric feel?",
-      singular:"Eric ended up adding {{N}} free game to his library. How would Eric feel?", 
+      need:"Eric is bored over the weekend and hears ahout new game releases. He wants to play <b>4</b> new free games",
+      outcome:"Eric ended up adding <b>{{N}}</b> free games to his library. How would Eric feel?",
+      singular:"Eric ended up adding <b>{{N}}</b> free game to his library. How would Eric feel?", 
       emoji:"🎮",
       null:"Suppose that he did not get to add any free games to his library. How would Eric feel?"
     },
     {
       label:"Watching TV 🎞️",
-      need:"Han is preparing for a long upcoming train trip. He wants to watch 4 episodes of a TV show on the train. ",
-      outcome:"Han ended up downloading {{N}} episodes for the trip. How would Han feel?",
-      singular:"Han ended up downloading {{N}} episode for the trip. How would Han feel?",
+      need:"Han is preparing for a long upcoming train trip. He wants to watch <b>4</b> episodes of a TV show on the train. ",
+      outcome:"Han ended up downloading <b>{{N}}</b> episodes for the trip. How would Han feel?",
+      singular:"Han ended up downloading <b>{{N}}</b> episode for the trip. How would Han feel?",
       emoji:"🎞️",
       null:"Suppose that he did not get to download any episodes for the trip. How would Han feel?"
     },
     {
       label:"Reading 📖",
-      need:"Zuri is preparing for the weekend and wants something to read. She sees that a neighbor is clearing out her large comic book collection, and she wants 4 comics.",
-      outcome:"She ended up taking {{N}} comic books home. How would Zuri feel?",
-      singular:"She ended up taking {{N}} comic book home. How would Zuri feel?",
+      need:"Zuri is preparing for the weekend and wants something to read. She sees that a neighbor is clearing out her large comic book collection, and she wants <b>4>/b> comics.",
+      outcome:"She ended up taking <b>{{N}}</b> comic books home. How would Zuri feel?",
+      singular:"She ended up taking <b>{{N}}</b>comic book home. How would Zuri feel?",
       emoji:"📖",
       null:"Suppose that Zuri did not get to take any comic books home. How would Zuri feel?"
     },
@@ -500,7 +500,7 @@ function buildMessage(stim, amount){
   if (amount === 0) return stim.null;
 
   // 2. If amount is 1 AND a singular version exists, use that
-  if (amount === 1 && stim.singular) {
+  if (amount === 1) {
      return stim.singular.replace('{{N}}', String(amount));
   }
 
