--- a/consumption.html
+++ b/consumption.html
@@ -149,7 +149,7 @@ const categories = {
     },
     {
       label:"Reading 📖",
-      need:"Zuri is preparing for the weekend and wants something to read. She saw that a neighbor is clearing out her large comic book collection, and she wants <b>4</b> comics.",
+      need:"Zuri is preparing for the weekend and wants something to read. She sees that a neighbor is clearing out her large comic book collection, and she wants <b>4</b> comics.",
       outcome:"She ended up taking <b>{{N}}</b> comic books home, and reading them cover to cover. How would Zuri feel?",
       singular:"She ended up taking <b>{{N}}</b> comic book home, and reading it cover to cover. How would Zuri feel?", 
       emoji:"📖",
