light bulbs home

--- a/consumption.html
+++ b/consumption.html
@@ -107,10 +107,10 @@ const categories = {
     {
       label:"Light 💡",
       need:"Adam thinks it's too dark in his house and hears that his friend is moving and giving away household supplies. He wants to make his house brighter by adding <b>4</b> light bulbs.",
-      outcome:"Adam ended up taking <b>{{N}}</b> light bulbs, installing all of them in his house, and turning them on. How would Adam feel?",
-      singular:"Adam ended up taking <b>{{N}}</b> light bulb, installing it in his house, and turning it on. How would Adam feel?",
+      outcome:"Adam ended up taking <b>{{N}}</b> light bulbs home, installing all of them in his house, and turning them on. How would Adam feel?",
+      singular:"Adam ended up taking <b>{{N}}</b> light bulb home, installing it in his house, and turning it on. How would Adam feel?",
       emoji:"💡",
-      null:"Suppose that Adam did not get to take and install any light bulbs. How would Adam feel?"
+      null:"Suppose that Adam did not get to take home and install any light bulbs. How would Adam feel?"
     },
     {
       label:"Temperature ♨️",
@@ -460,8 +460,7 @@ var debrief = {
         pages: [
             '<p style="font-size: 20px;"><strong>Debrief</strong></p>' +
             '<p><br>Thank you so much for helping us with this study!</p>' +
-            '<br><p style = "max-width:800px;"> In this study, we asked you questions about how characters’ feelings would be at different stages of satisfaction. ' +
-            'The goal is to test the hypothesis that people intuitively think that the additional satisfaction gained from each extra unit decreases over time, and may ultimately become negative. ' +
+            '<br><p style = "max-width:800px;"> The goal is to test the hypothesis that people intuitively think that the additional satisfaction gained from each extra unit consumed decreases over time, and may ultimately become negative.' +
             '</p><br><p style = "max-width:800px;">Next up, we have a few final questions about yourself and your experience today.</p>'
         ],
         show_clickable_nav: true,
