--- a/acquisition.html
+++ b/acquisition.html
@@ -93,7 +93,7 @@ const categories = {
       emoji:"🥤",
       null:"Suppose that Hiro did not get to fill his water bottle with any water. How would Hiro feel?"
     },
-    
+
     {
       label:"Healthy fruits 🍊",
       need:"Nia feels hungry and sees that a farm stand is giving out free oranges. She wants <b>4</b> oranges.",
@@ -108,10 +108,10 @@ const categories = {
     {
       label:"Light 💡",
       need:"Adam thinks it's too dark in his house and hears that his friend is moving and giving away household supplies. He wants to make his house brighter by adding <b>4</b> light bulbs.",
-      outcome:"Adam ended up taking <b>{{N}}</b> light bulbs. How would Adam feel?",
-      singular:"Adam ended up taking <b>{{N}}</b> light bulb. How would Adam feel?", 
+      outcome:"Adam ended up taking <b>{{N}}</b> light bulbs home. How would Adam feel?",
+      singular:"Adam ended up taking <b>{{N}}</b> light bulb home. How would Adam feel?", 
       emoji:"💡",
-      null:"Suppose that Adam did not get to take any light bulbs. How would Adam feel?"
+      null:"Suppose that Adam did not get to take any light bulbs home. How would Adam feel?"
     },
     {
       label:"Temperature ♨️",
@@ -462,7 +462,7 @@ var debrief = {
             '<p style="font-size: 20px;"><strong>Debrief</strong></p>' +
             '<p><br>Thank you so much for helping us with this study!</p>' +
             '<br><p style = "max-width:800px;"> In this study, we asked you questions about how characters’ feelings would be at different stages of satisfaction. ' +
-            'The goal is to test the hypothesis that people intuitively think that the additional satisfaction gained from each extra unit decreases over time, and may ultimately become negative. ' +
+            'The goal is to test the hypothesis that people intuitively think that the additional satisfaction gained from each extra unit acquired decreases over time.' +
             '</p><br><p style = "max-width:800px;">Next up, we have a few final questions about yourself and your experience today.</p>'
         ],
         show_clickable_nav: true,
