--- a/condition1.html
+++ b/condition1.html
@@ -49,7 +49,7 @@
         override_safe_mode: true,
         show_progress_bar: true,
         on_finish: function() {
-          //window.location = "https://connect.cloudresearch.com/participant/project/502D9950BA/complete";
+          window.location = "https://connect.cloudresearch.com/participant/project/502D9950BA/complete";
           //jsPsych.data.displayData();
         }
       });
