--- a/condition2.html
+++ b/condition2.html
@@ -49,7 +49,7 @@
         override_safe_mode: true,
         show_progress_bar: true,
         on_finish: function() {
-          //window.location = "https://connect.cloudresearch.com/participant/project/C0D5F1CF9B/complete";
+          window.location = "https://connect.cloudresearch.com/participant/project/C0D5F1CF9B/complete";
           //jsPsych.data.displayData();
         }
       });
