--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
     const selectedCondition = Math.random() < 0.5 ? "Acquisition" : "Consumption";
 
     // 2. HELPER FUNCTIONS
-    const filename = `${participant_id}.csv`;
     function isScentStimulus(stim) { return stim.label && stim.label.includes("Scent"); }
     function tokenForStim(stim) {
       if (isScentStimulus(stim)) return { type: "img", src: "img/perfume.png", alt: "perfume" };
@@ -96,14 +95,6 @@
       'entertainment::Gaming 🎮': { name: 'Eric', img: 'EricBubble' },
       'entertainment::Watching TV 🎞️': { name: 'Han', img: 'HanBubble' },
       'entertainment::Reading 📖': { name: 'Zuri', img: 'ZuriBubble' },
-    };
-
-    const save_data = {
-                type: jsPsychPipe,
-                action: "save",
-                experiment_id: "eNkz5Hp6ozWE",
-                filename: filename,
-                data_string: ()=>jsPsych.data.get().csv()
     };
 
     const feedback_demographics = {
@@ -258,10 +249,21 @@
 
     /* ================= TIMELINE ================= */
     function buildTimeline(jsPsych, categories, debriefText) {
+
         var duration = '5 minutes';
         var amount = '$1.25';
         const participant_id = jsPsych.data.getURLVariable('participantId'); 
         const filename = `${participant_id}.csv`;
+        const assignment_id = jsPsych.data.getURLVariable('assignmentId');
+        const project_id = jsPsych.data.getURLVariable('projectId');
+
+        const save_data = {
+        type: jsPsychPipe,
+        action: "save",
+        experiment_id: "eNkz5Hp6ozWE",
+        filename: filename,
+        data_string: () => jsPsych.data.get().csv()
+    };
 
         var consent = {
             type: jsPsychHtmlButtonResponse,
